# matter-persistence

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.yaml  pyproject.toml  run_tests.sh
.github/workflows/: lint.yaml  release.yaml  run-tests.yaml
examples/: redis.ipynb  sql.ipynb
matter_library_template/: __about__.py
matter_persistence/: __about__.py  base.py  exceptions.py  foundation_model.py
matter_persistence/cache/: exceptions.py
matter_persistence/database/: __init__.py  base.py  client.py  config.py  connection.py  exceptions.py  orm.py  session.py  utils.py
matter_persistence/database/migrations/resources/: env.py
matter_persistence/redis/: api_cache_client.py  async_redis_client.py  base.py  cache_helper.py  decorators.py  manager.py  models.py  utils.py
matter_persistence/sql/: base.py  decorators.py  mixins.py  models.py  sessions.py  utils.py
scripts/: run_with_local_venv.sh
tests/: conftest.py  test_decorators.py  test_foundation_model.py
tests/cache/: conftest.py  test_client.py  test_config.py
tests/cache/dockerized/: conftest.py  memcached.py  test_cache_client.py
tests/database/: conftest.py  test_client.py  test_config.py  test_get_or_reuse_connection.py  test_get_raw_driver_connection.py  test_orm.py  test_session.py  test_utils.py
tests/database/dockerized/: conftest.py  test_create_migration_with_schema.py  test_get_raw_driver_connection.py
tests/database/migrations/: another_model.py  base_model.py  conftest.py  test_apply_migrations.py  test_async_to_sync.py  test_create_migrations.py  test_load_databaseorm_subclass.py  test_load_db_config.py  test_migration_cycle.py
tests/database/orm/: conftest.py  test_count.py  test_delete.py  test_get.py  test_list.py  test_query.py  test_save.py
tests/redis/: conftest.py  test_api_cache_client.py  test_async_redis_client.py  test_decorators.py  test_manager.py
tests/sql/: conftest.py  test_base.py  test_decorators.py  test_manager.py  test_models.py  test_sessions.py  test_utils.py
